# src/node/koa2_backend/routes/gate_controller.js
@@ -1,0 +1,10 @@
+const router = require('koa-router')()
+
+import * as gate_service from "../services/gate_service"
+
+router.get('/gateio/ticker/:ticker_pair', async (ctx, next) => {
+  ctx.response.type = 'json';
+  await gate_service.getPrice(ctx)
+})
+
+module.exports = router
